header z-index fix

--- a/html/popup.less
+++ b/html/popup.less
@@ -40,6 +40,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    z-index: 10;
     // font-weight: 500;
 
     .header-item {
